<package>
  <name>aimen_abb</name>
  <version>0.4.0</version>
  <description>
    <p>
      ROS Industrial support for the ABB IRB4400 (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files 
      for ABB IRB4400 manipulators.
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in
      the ABB data sheets.  All URDFs / XACROs are based on the
      default motion and joint velocity limits, unless noted otherwise (ie:
      no support for high speed joints, extended / limited motion ranges or
      other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author email="jorge.rodriguez@aimen.es">Jorge Rodríguez-Araújo</author>
  <maintainer email="jorge.rodriguez@aimen.es">Jorge Rodríguez-Araújo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
