<package>
  <name>aimen_kuka</name>
  <version>0.1.0</version>
  <description>
    <p>
      PC communications support for the KUKA KR210-2 (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for KUKA KR210-2 manipulators.
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in
      the KUKA data sheets.  All URDFs / XACROs are based on the
      default motion and joint velocity limits, unless noted otherwise (ie:
      no support for high speed joints, extended / limited motion ranges or
      other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author email="baltasar.lodeiro@aimen.es">Baltasar Lodeiro-Señarís</author>
  <maintainer email="baltasar.lodeiro@aimen.es">Baltasar Lodeiro-Señarís</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
